# seashell

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  CREDITS  INSTALL  README  README.md  TESTING-NOTES  setup  setup.go
doc/: CMakeLists.txt  isg_estimate.tex  isg_project.tex  main.scrbl  utils.rkt
doc/administrative/: main.scrbl
doc/developer/: layout.scrbl  main.scrbl
doc/developer/support/: compiler.scrbl  main.scrbl
doc/release/: 2.4.0.scrbl  2.4.1.scrbl  2.5.0.scrbl  2.5.1.scrbl  2.5.2.scrbl  2.5.3.scrbl  2.5.4.scrbl  2.5.5.scrbl  2.5.6.scrbl  2.5.7.scrbl  2.5.8.scrbl  3.0.0.scrbl  3.0.1.scrbl  3.0.2.scrbl  3.0.3.scrbl  3.0.4.scrbl  3.0.6.scrbl  4.0.0.scrbl  layout.scrbl  main.scrbl
doc/user/: TODO.txt  error-codes.scrbl  faq.scrbl  getting-started.scrbl  main.scrbl  seashell-errors.scrbl  testing-programs.scrbl
lib/: CMakeLists.txt  clang-5.0-SVNVersion.inc.patch  codemirror  compiler-rt-sigalstack.patch  libcxx  libcxxabi
lib/codemirror-2.35/lib/util/: formatting.js
lib/jslib/: fit.js  xterm.css  xterm.js
lib/jslib/codemirror/5.4.0/: codemirror.min.js
lib/patches/: clang-3.3-CMakeLists.txt
lib/termlib/: index.html  readme.txt
lib/termlib/compacted/: termlib_min.js
src/: .gitignore  CMakeLists.txt  Makefile  README  aodb.c  aodb.rkt  api.js  c_compiler.cpp  c_compiler.h  cas.rkt  common.rkt  compile.sh  config.rkt  cp2chroot  database.rkt  format-trace.rkt  generic-rpc.rkt  judge.ss  log.rkt  multiplex.rkt  run.sh  sandboxed.rkt  seashell-api.rkt  seashell-run.rkt  seashell.rkt  ss_env.c  test.rkt  websocket-test.rkt
src/backend/: CMakeLists.txt  seashell-config.h.in  seashell-config.rkt.in  seashell-config.rktd.in
src/backend/backend/: CMakeLists.txt
src/backend/backend/compiler/: CMakeLists.txt  compiler-test.rkt  compiler.cpp  compiler.rkt
src/backend/backend/git/: CMakeLists.txt  git.cc  git.rkt
src/backend/compiler/: CMakeLists.txt  compiler.cc  compiler.h  driver.cc
src/backend/crypto/: CMakeLists.txt  crypto.c
src/backend/git/: CMakeLists.txt  git.cc
src/backend/login/: CMakeLists.txt  login.c
src/backend/server/: CMakeLists.txt  seashell.rkt  server-config.rktd
src/backend/server/tunnel/: CMakeLists.txt  tunnel.rkt
src/backend/tunnel/: CMakeLists.txt  tunnel.c  tunnel.rkt
src/backend/user/: CMakeLists.txt  launcher.c  security.c  support.c  user-child.c  user.c
src/collects/: CMakeLists.txt  login.cgi.in  login.cgi.rkt  seashell-cli.rkt  seashell-config.rkt.in  seashell-main.rkt  seashell-user-launcher.rkt
src/collects/seashell/: backend.rkt  compile-collects.rkt  compiler.rkt  crypto.rkt  diff.rkt  format-trace.rkt  git.rkt  log.rkt  login.rkt  multiplex.rkt  security.rkt  server.rkt  support-native.rkt  tunnel.rkt  utils.rkt  websocket.rkt
src/collects/seashell-cli/: export.rkt  import.rkt  marmtest.rkt  object.rkt  run.rkt  seashell-cli.rkt
src/collects/seashell/backend/: asan-driver.rkt  asan-error-message.rkt  asan-error-parse.rkt  authenticate.rkt  backup.rkt  db-files.rkt  dispatch.rkt  exception.rkt  execute.rkt  files.rkt  http-dispatchers.rkt  lock.rkt  offline.rkt  project.rkt  runner.rkt  server.rkt  sync.rkt  template.rkt
src/collects/seashell/compiler/: compiler-test.rkt  compiler.rkt  ffi.rkt  init.rkt  place-main.rkt  place.rkt  seashell-compiler.rkt
src/collects/seashell/db/: changes.rkt  database.rkt  tools.rkt  (+3 more)
src/compiler/: CMakeLists.txt
src/conf/: not-found.html
src/frontend/: .gitignore  CMakeLists.txt  README.md  cm-validator-remote.js  crypto.js  dialog.patch  format.js  frontend.html  index.html  login.js  manifest.json  package.json  racket-lexer.txt  seashell.css  seashell.js  seashell_glue.js  server.js  testing.htm  tsconfig.json  tslint.json  webpack.config.js  webpack.config.prod.js  websocket_client.js
src/frontend/css/: DarkThemeColours.css  NormalThemeColours.css  common.css  common_default.css  dark.css  light.css  style.css
src/frontend/frontend/: body.html  console.js  dialog-old.html  directives.js  errors.js  file.js  filters.js  fonts  frontend.js  modals.js  navigation-old.html  project-list-template.html  project-list.js  project.js  question.js  routes.js  scripts.html  settings.js
src/frontend/include/: body.html  dialog.html  footer.html  navigation.html  scripts.html
src/frontend/index/: login-controller.js  scripts.html
src/frontend/js/: angular-dragdrop.min.js  compiler-service.js  cookie-service.js  cookie.js  login.js  make_patch.js  marmoset-service.js  offline-compile.js  offline-run.js  project-service.js  raven.js  seashell.js  setup.js  storage-service.js  websocket-service.js
src/frontend/src/: App.tsx  HotKeys.ts  Layout.scss  Layout.tsx  actions.ts  index.html  index.tsx  types.ts
src/frontend/test/: Services.test.ts  account.ts  before_test.js  crypto.test.ts  reducers.test.js  storage.test.ts  websocket.test.ts
src/frontend/tests/: seashell.conf.js
src/frontend/typings/: index.d.ts
src/frontend/workers/: offline-run.js
src/gui/: README  api.js  clangMessages.js  cm-validator-remote.js  format.js  seashell.css  seashell.js  testing.htm
src/gui/termlib/: termlib.js
src/helpers/: get-test-results.c  get-test-results.rkt  skeleton_file_list.rkt  skeleton_list.cgi
src/htdocs/: api.js  clangMessages.js  cm-validator-remote.js  codemirror  format.js  index.htm  seashell.css  seashell.js  test_api.html
src/runtime/: CMakeLists.txt  seashell-runtime.cpp  seashell-runtime.rkt
src/servers/backend/: CMakeLists.txt
src/ssl/: server.crt  server.csr  server.key
src/tests/: run-tests.rkt
src/tests/frontend-tests/: seashell.conf.js
src/tests/marmoset-racket-test-runner/: Test.expect  Test.in  Test.rkt
src/tests/tests/: asan-error-parse.rkt  cli.rkt  compiler.rkt  config.rkt  crypto.rkt  database.rkt  db-files.rkt  db.rkt  files.rkt  offline.rkt  preprocessor.rkt  project.rkt  test-environment.rkt
src/user/: CMakeLists.txt  Makefile  ulaunch.c
src/user_backend/: CMakeLists.txt  config.rkt
src/user_backend/backend/: files.rkt  project.rkt  run.rkt
src/user_backend/tunnel/: CMakeLists.txt  tunnel.c
(+198 files in other folders)
